updated error log file Nlog

--- a/NLog.config
+++ b/NLog.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<variable name="appName" value="RecipeGenius" />
+	<variable name="appName" value="RecipeGeniusPro" />
 	<targets>
-		<target name="file" xsi:type="File" fileName="D:\RecipeGenius/${var:appName}_${shortdate:format=yyyyMMdd}.log"
+		<target name="file" xsi:type="File" fileName="D:\Visual Studio c#\RecipeGeniusPro/${var:appName}_${shortdate:format=yyyyMMdd}.log"
                 layout="${longdate}|${level:uppercase=true}|${message}|${exception:format=ToString}" />
 	</targets>
 	<rules>
